[package]
name = "streamid"
version = "0.1.0"
edition = "2021"
description = "Ceramic StreamID"
documentation = "https://docs.rs/streamid/"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ceramic-rs/streamid"
keywords = ["ceramic", "cid", "commitid", "streamid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.10.0"
dag-cbor = "0.1.0"
libipld-base = "0.1.0"
num_enum = "0.5.7"
once_cell = "1.16.0"
regex = "1.7.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_plain = "1.0.1"
thiserror = "1.0.38"
unsigned-varint = "0.7.1"
